--- a/EmpManagement/Views/Administration/ListRoles.cshtml
+++ b/EmpManagement/Views/Administration/ListRoles.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<IdentityRole>
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService authorizationService
+
 @{
     ViewBag.Title = "All Roles";
 }
@@ -44,8 +47,12 @@ else
             </div>
             <div class="card-footer">
                 <form method="post" asp-action="DeleteRole" asp-route-id="@item.Id">
-                    <a asp-controller="Administration" asp-action="EditRole"
-                       asp-route-id="@item.Id" class="btn btn-primary">Edit</a>
+                    @if ((await authorizationService.AuthorizeAsync(User,"EditRolePolicy")).Succeeded)
+                    {
+                        <a asp-controller="Administration" asp-action="EditRole"
+                           asp-route-id="@item.Id" class="btn btn-primary">Edit</a>
+                    }
+
 
                     <span id="confirmDeleteSpan_@item.Id" style="display:none">
                         <span>Are you sure you want to delete?</span>
