--- a/EmpManagement/Views/Home/Index.cshtml
+++ b/EmpManagement/Views/Home/Index.cshtml
@@ -26,8 +26,8 @@
                 </div>
 
                 <div class="card-footer text-center">
-                    <a asp-controller="home" asp-action="details" asp-route-id="@employee.Id" class="btn btn-primary m-1">Details</a>
-                    <a href="@Url.Action("edit","Home",new { id=employee.Id})" class="btn btn-primary m-1">Edit</a>
+                    <a asp-controller="home" asp-action="details" asp-route-id="@employee.EncryptedId" class="btn btn-primary m-1">Details</a>
+                    <a href="@Url.Action("edit","Home")" class="btn btn-primary m-1">Edit</a>
                     <a href="#" class="btn btn-danger m-1">Delete</a>
                 </div>
             </div>
